fixing contrast issues

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,7 +5,7 @@
 
 // scss-docs-start color-variables
 $blue: #84ace3;
-$purple: #897ca2;
+$purple: #6a5f7e;
 // scss-docs-end color-variables
 
 // scss-docs-start colors-map
@@ -38,7 +38,7 @@ $theme-colors: (
   "activity": #e1dceb,
   "activity-bg": #8e86a1,
   "search": #8e86a1,
-  "post": #d8d3e2,
+  "post": #8f81ab,
   "post-bg": #f5f0ff,
   "feeling-bg": #e6daff,
   "sort-oul": #59516a,
